<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosepost"
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal" />
<LinearLayout
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_bright"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/createpicture"
        android:id="@+id/btncam"
        android:background="@drawable/btnbg2"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black"
        android:gravity="start|center"
        android:layout_gravity="start" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_bright"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/submitform"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:id="@+id/btnform"
        android:textColor="@color/black"
        android:background="@drawable/btnbg2"
        android:gravity="start|center"
        android:layout_gravity="start" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_bright"/>

</LinearLayout>


</LinearLayout>