<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/testl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/cartrel"
        android:clickable="true"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#424242"
            android:alpha="0.35"
            android:contentDescription="@string/ProdImg1" />

        <ProgressBar
            android:id="@+id/cartPBD"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:keepScreenOn="true"
            android:indeterminateBehavior="repeat"
            android:theme="@style/WhiteAccent"
           />

    </FrameLayout>
<TextView
    android:id="@+id/noprod"
    android:textColor="@color/Text"
    android:text="@string/EmptyCart"
    android:gravity="center"
    android:textSize="25sp"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

    <android.support.v7.widget.RecyclerView
    android:id="@+id/cartRECYCLE"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/linearcart"
    />


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/linearcart"
        android:background="@color/cardview_light_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/totalfrag"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:weightSum="5"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GrandTotal"
                android:textColor="@color/badgecolor"
                android:textStyle="bold"
                android:layout_weight="2"
                android:textSize="20sp"
                android:id="@+id/fixtext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalCurrency"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:gravity="end"
                android:layout_weight="3"
                android:textStyle="bold|italic"
                android:id="@+id/USD"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold|italic"
                android:id="@+id/finalPrice" />

        </LinearLayout>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"

            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/cartbg"
            android:layout_marginBottom="15dp"
            android:text="@string/ProceedPayment"
            android:id="@+id/proCARTbutton" />
    </LinearLayout>

</RelativeLayout>